# Synth

./: CMakeLists.txt  README.md  check_and_zip.py
drivers/: buttons.c  interrupts.c  intervalTimer.c  switches.c  touchscreen.c
lab1_helloworld/: main.c
lab2_gpio/: gpioTest.c  gpioTest.h  main.c
lab6_clock/: CMakeLists.txt  clockControl.c  clockDisplay.c
lab8_missilecommand/: CMakeLists.txt  gameControl.c  missile.c  plane.c
lab9_project/: CMakeLists.txt  main.c  oscillator.c  oscillator.h  sound.c  sound.h  timer_ps.c
lab9_project/sounds/: A.wav.c  A.wav.h  A4_C5_F5_sine.wav.c  A4_C5_F5_sine.wav.h  A4_C5_sine.wav.c  A4_C5_sine.wav.h  A4_F5_sine.wav.c  A4_F5_sine.wav.h  A4_sine.wav.c  A4_sine.wav.h  B4_D5_G5_sine.wav.c  B4_D5_G5_sine.wav.h  B4_D5_sine.wav.c  B4_D5_sine.wav.h  B4_G5_sine.wav.c  B4_G5_sine.wav.h  B4_sine.wav.c  B4_sine.wav.h  C4_C5_sine.wav.c  C4_C5_sine.wav.h  C4_E4_C5_sine.wav.c  C4_E4_C5_sine.wav.h  C4_E4_G4_C5_sine.wav.c  C4_E4_G4_C5_sine.wav.h  C4_E4_G4_sine.wav.c  C4_E4_G4_sine.wav.h  C4_E4_sine.wav.c  C4_E4_sine.wav.h  C4_G4_C5_sine.wav.c  C4_G4_C5_sine.wav.h  C4_G4_sine.wav.c  C4_G4_sine.wav.h  C4_sine.wav.c  C4_sine.wav.h  C5_F5_sine.wav.c  C5_F5_sine.wav.h  C5_sine.wav.c  C5_sine.wav.h  CMakeLists.txt  C_New.wav.c  (+53 more)
